--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,7 @@ body {
 }
 
 .footer-subscription-box {
-    margin-left: 93px;
+    margin-left: auto;
 }
 
 .footer-subscription-text {
@@ -634,7 +634,7 @@ body {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--primary-white-color);
-    padding-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .footer-subscription {
@@ -655,6 +655,8 @@ body {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     background: #2F303A;
     padding-left: 14px;
+    border-radius: 4px;
+    color: var(--primary-white-color);
 
 
 }
@@ -674,10 +676,11 @@ body {
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
+    letter-spacing: 6%;
+    font-style: bold;
     align-items: center;
     justify-content: center;
     gap: 10px;
-
 
 }
 
@@ -842,6 +845,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
+    padding: 40px;
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -870,7 +874,8 @@ body {
 }
 
 .modal-close-icon {
-    transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Меняет цвет svg при hover и focus */
@@ -898,8 +903,7 @@ body {
 }
 
 .backdrop-text {
-    margin-top: 40px;
-    margin-bottom: 30px;
+    margin-bottom: 12px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -914,11 +918,9 @@ body {
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
-    margin-left: 41px;
-    margin-right: 39px;
     position: relative;
     cursor: pointer;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 
@@ -944,19 +946,7 @@ body {
     letter-spacing: 0.01em;
 }
 
-.form-input {
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-
-.form-input:hover {
-    border: 1px solid var(--accent-color);
-
-}
-
-.form-input:hover {
-    fill: var(--accent-color);
-}
 
 .form-icon {
     position: absolute;
@@ -985,17 +975,11 @@ body {
     resize: none;
     cursor: pointer;
     outline-color: var(--accent-color);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    height: 120px;
+    padding: 12px 16px;
 }
 
-.backdrop-textarea:hover {
-    border: 1px solid var(--accent-color);
 
-}
-
-.backdrop-textarea:hover {
-    fill: var(--accent-color);
-}
 
 .form-field textarea {
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1030,6 +1014,14 @@ textarea::placeholder {
 
 }
 
+.input-checbox {
+    /* Сбрасывает все оформление от браузера */
+    appearance: none;
+    position: absolute;
+}
+
+
+
 .checkbox-text {
     font-family: 'Roboto';
     font-style: normal;
@@ -1053,7 +1045,7 @@ textarea::placeholder {
     margin-left: 4px;
 }
 
-.checkbox-button {
+.backdrop-button {
     background: #2196F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
@@ -1075,8 +1067,8 @@ textarea::placeholder {
 
 }
 
-.checkbox-button:hover,
-.checkbox-button:focus {
+.backdrop-button:hover,
+.backdrop-button:focus {
     background: var(--background-hero-button);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
