--- a/css/style.css
+++ b/css/style.css
@@ -662,11 +662,7 @@ body {
 }
 
 .footer-subscription-button {
-
-    width: 200px;
-    height: 50px;
-    left: 1185px;
-    top: 2784px;
+    padding: 10px 28px;
     background: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
@@ -676,11 +672,12 @@ body {
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
-    letter-spacing: 6%;
+    letter-spacing: 0.06em;
     font-style: bold;
     align-items: center;
     justify-content: center;
     gap: 10px;
+    font-weight: 700;
 
 }
 
@@ -908,7 +905,7 @@ body {
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
-    line-height: 23px;
+    line-height: 1.15;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
@@ -947,7 +944,6 @@ body {
 }
 
 
-
 .form-icon {
     position: absolute;
     bottom: 50%;
@@ -969,7 +965,24 @@ body {
 
 }
 
+.form-textarea {
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    cursor: pointer;
+}
 
+.textarea-label {
+    margin-bottom: 4px;
+    color: var(--text-color);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+}
 
 .backdrop-textarea {
     resize: none;
@@ -981,7 +994,7 @@ body {
 
 
 
-.form-field textarea {
+.form-textarea textarea {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
 }
@@ -1005,7 +1018,6 @@ textarea::placeholder {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
     margin-bottom: 30px;
 
 }
